--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,1 +1,104 @@
-<p>This is the about view.</p>
+
+<div class="all" ng-include src="'views/navbar.html'">
+</div>
+
+<div class="row">
+
+    <div class="span12">
+      <div class="widget widget-nopad" style="margin-bottom: 0px;">
+        <div class="widget-content">
+          <div id="calendar2">
+          </div>
+        </div>
+        <!-- /widget-content -->
+
+      </div>
+      <!-- /widget -->
+    </div>
+    <!-- /span12 -->
+
+  <div class="span12">
+    <div class="widget widget-table action-table">
+<!--       <div class="widget-header"> <i class="icon-th-list"></i>
+        <h3></h3>
+      </div> -->
+      <!-- /widget-header -->
+
+        <div class="widget-content">
+          <table st-table="displayedCollection" st-safe-src="rowCollection" class="table table-striped outer_content_table">
+            <thead>
+              <tr>
+                <th>
+                   <!--<input st-search="name" placeholder="search for firstname" class="input-xlarge form-control" type="search"/>-->
+                  <input id="search_txt" placeholder="Search by Name" type="search" ng-model="search.employee.name"/>
+                </th>
+<!--                 <th colspan="4">
+                  <input st-search placeholder="global search" class="input-sm form-control" type="search"/>
+                </th> -->
+              </tr>
+              <tr>
+                <th colspan="2">
+                  <table class="inner_header_table">
+                    <tr>
+                      <td st-sort="employee.name">Name</td>
+                      <td st-sort="status">Status</td>
+                      <td>Remarks</td>
+                    </tr>
+                  </table>
+                </th>
+              </tr>
+            </thead>
+            <tbody>
+            <tr ng-show="displayedCollection.length!=0" ng-repeat="row in displayedCollection | filter:search:strict">
+              <td colspan="2">
+                <div class="box-content" style="display: block;">
+                  <ul class="dashboard-list metro">
+                    <li>
+                      <table class="inner_content_table">
+                        <!--<tr><td rowspan="4" class="emp_avatar"><img class="avatar" src="img/message_avatar1.png"></td></tr>-->
+                          <tr><td rowspan="4" class="emp_name"><h3>{{row.employee.name}}</h3></td></tr>
+                          <tr><td rowspan="4" class="emp_status"><h3>{{row.status}}</h3></td></tr>
+                          <tr><td rowspan="4" class="emp_remarks"><h3>{{row.remark}}</h3></td></tr>
+                        </tr>
+                      </table>
+                    </li>
+                  </ul>
+                </div>
+              </td>
+            </tr>
+            <tr >
+              <td ng-show="displayedCollection.length==0" style="text-align: center;">
+                No results found
+              </td>
+            </tr>
+            </tbody>
+            <tfoot>
+              <tr>
+                <td colspan="5" class="text-center">
+                  <div st-pagination="" st-items-by-page="itemsByPage" st-displayed-pages="7"></div>
+                </td>
+              </tr>
+              <tr >
+                <td style="text-align: right;">
+                  <button type="button" class="btn" style="background-color: #dc6161;color: white;border-color: transparent;border-radius: 0px;" ng-click="getMyStatus()"> Fetch mine </button>
+                </td>
+              </tr>
+            </tfoot>
+          </table>
+        </div>
+      <!-- /widget-content --> 
+      </div>
+    <!-- /widget -->
+
+    <!--<button id="fetchbtn">fetch</button><br>-->
+    <!--<pre>http status code: {{status}}</pre>-->
+    <!--<pre>http response data: {{data}}</pre>-->
+    <!--<pre>http response data: {{statuses}}</pre>-->
+
+  </div>
+<!-- /span12 -->
+</div>
+<!-- /row -->
+
+
+
