--- a/app/css/theme.css
+++ b/app/css/theme.css
@@ -19,7 +19,7 @@
 =================================================================== */
 
 body {
-	background: #F5F5F5;
+	background: #ffffff;
 	color: #333;
 	border: none;
 	font-family: 'Open Sans', sans-serif;
