--- a/app/views/about.html
+++ b/app/views/about.html
@@ -19,17 +19,11 @@
 
   <div class="span12">
     <div class="widget widget-table action-table">
-<!--       <div class="widget-header"> <i class="icon-th-list"></i>
-        <h3></h3>
-      </div> -->
-      <!-- /widget-header -->
-
         <div class="widget-content">
           <table st-table="displayedCollection" st-safe-src="rowCollection" class="table table-striped outer_content_table">
             <thead>
               <tr>
                 <th>
-                   <!--<input st-search="name" placeholder="search for firstname" class="input-xlarge form-control" type="search"/>-->
                   <input id="search_txt" placeholder="Search by Name" type="search" ng-model="search.employee.name"/>
                 </th>
 <!--                 <th colspan="4">
@@ -41,15 +35,24 @@
                   <table class="inner_header_table">
                     <tr>
                       <td st-sort="employee.name">Name</td>
-                      <td st-sort="status">Status</td>
-                      <td>Remarks</td>
+                      <td>Status
+                        <div class="dropdown pull-right"> <a class="dropdown-toggle " id="dLabel" role="button" data-toggle="dropdown" data-target="#" data-placeholder="false"><i class="fa fa-cog"></i></a>
+                          <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                            <li data-ng-repeat="s in status">
+                              <input type="checkbox" checked id="{{$index}}"><label for="{{$index}}" value="{{s}}" ng-model="s"
+                                data-ng-click="selectStatus(s)">{{s}}</label>
+                            </li>
+                          </ul>
+                        </div>
+                      </td>
+                      <td>Remarks{{search.status}}</td>
                     </tr>
                   </table>
                 </th>
               </tr>
             </thead>
             <tbody>
-            <tr ng-show="displayedCollection.length!=0" ng-repeat="row in displayedCollection | filter:search:strict">
+            <tr ng-show="displayedCollection.length!=0" ng-repeat="row in displayedCollection | filter:search:strict | filter:filterByStatus">
               <td colspan="2">
                 <div class="box-content" style="display: block;">
                   <ul class="dashboard-list metro">
