--- a/app/views/about.html
+++ b/app/views/about.html
@@ -45,7 +45,7 @@
                           </ul>
                         </div>
                       </td>
-                      <td>Remarks{{search.status}}</td>
+                      <td>Remarks</td>
                     </tr>
                   </table>
                 </th>
@@ -58,7 +58,6 @@
                   <ul class="dashboard-list metro">
                     <li>
                       <table class="inner_content_table">
-                        <!--<tr><td rowspan="4" class="emp_avatar"><img class="avatar" src="img/message_avatar1.png"></td></tr>-->
                           <tr><td rowspan="4" class="emp_name"><h3>{{row.employee.name}}</h3></td></tr>
                           <tr><td rowspan="4" class="emp_status"><h3>{{row.status}}</h3></td></tr>
                           <tr><td rowspan="4" class="emp_remarks"><h3>{{row.remark}}</h3></td></tr>
@@ -79,11 +78,6 @@
               <tr>
                 <td colspan="5" class="text-center">
                   <div st-pagination="" st-items-by-page="itemsByPage" st-displayed-pages="7"></div>
-                </td>
-              </tr>
-              <tr >
-                <td style="text-align: right;">
-                  <button type="button" class="btn" style="background-color: #dc6161;color: white;border-color: transparent;border-radius: 0px;" ng-click="getMyStatus()"> Fetch mine </button>
                 </td>
               </tr>
             </tfoot>
