--- a/app/css/apna.css
+++ b/app/css/apna.css
@@ -227,7 +227,7 @@ ul.dashboard-list.metro li .avatar {
   outline: none;
 }
 .lead {
-  background-color: #6c1d5f;
+  background-color: #384042;
   color: white;
 }
 .jqi .jqiclose {
@@ -239,7 +239,7 @@ ul.dashboard-list.metro li .avatar {
   outline: none;
 }
 .jqi .btn-primary {
-  background-color: #6c1d5f;
+  background-color: #384042;
   outline: none;
 }
 
